--- a/weblap/public_html/index.html
+++ b/weblap/public_html/index.html
@@ -11,6 +11,9 @@ and open the template in the editor.
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
     <body>
-        <div>TODO write content</div>
+        <div>
+            <header>Ez itt egy weblap</header>
+            
+        </div>
     </body>
 </html>
