--- a/weblap/public_html/index.html
+++ b/weblap/public_html/index.html
@@ -13,7 +13,7 @@ and open the template in the editor.
     <body>
         <div>
             <header>Ez itt egy weblap</header>
-            
+            <p>blablabla</p>
         </div>
     </body>
 </html>
