--- a/weblap/public_html/index.html
+++ b/weblap/public_html/index.html
@@ -1,19 +1,17 @@
-<!DOCTYPE html>
-<!--
-To change this license header, choose License Headers in Project Properties.
-To change this template file, choose Tools | Templates
-and open the template in the editor.
--->
 <html>
     <head>
         <title>TODO supply a title</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link type="text/css" rel="stylesheet" href="minta.css"/>
     </head>
     <body>
         <div>
-            <header>Ez itt egy weblap</header>
-            <p>blablabla</p>
+            <header>
+                <h1>Amit mindig is tudni akartál a méhekről<img src="bee_gif.gif" alt="Bee"></h1>
+ 
+            </header>
+            
         </div>
     </body>
 </html>
