középre igazítás classal

--- a/weblap/public_html/index.html
+++ b/weblap/public_html/index.html
@@ -7,7 +7,7 @@
     </head>
     <body>
         <div>
-            <header>
+            <header class="center">
                 <h1>Amit mindig is tudni akartál a méhekről<img src="bee_gif.gif" alt="Bee"></h1>
  
             </header>
